versions/v2.14/modules/en/pages/cluster-deployment/hosted-kubernetes/eks/eks.adoc
= Creating an EKS Cluster
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2026-04-21
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/eks.adoc 
:product-path: cluster-deployment/hosted-kubernetes/eks/eks.adoc
ifeval::["{build-type}" != "community"]
:xref-sync-hosted-clusters: xref:cluster-deployment/hosted-kubernetes/sync-clusters.adoc
:xref-deploy-eks-config: xref:cluster-deployment/hosted-kubernetes/eks/configuration.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-sync-hosted-clusters: xref:reference-guides/cluster-configuration/rancher-server-configuration/sync-clusters.adoc
:xref-deploy-eks-config: xref:reference-guides/cluster-configuration/rancher-server-configuration/eks-cluster-configuration.adoc
endif::[]

Amazon EKS provides a managed control plane for your Kubernetes cluster. Amazon EKS runs the Kubernetes control plane instances across multiple Availability Zones to ensure high availability. Rancher provides an intuitive user interface for managing and deploying the Kubernetes clusters you run in Amazon EKS. With this guide, you will use Rancher to quickly and easily launch an Amazon EKS Kubernetes cluster in your AWS account. For more information on Amazon EKS, see this https://docs.aws.amazon.com/eks/latest/userguide/what-is-eks.html[documentation].

[#_prerequisites_in_amazon_web_services]
== Prerequisites in Amazon Web Services

[CAUTION]
====

Deploying to Amazon AWS will incur charges. For more information, refer to the https://aws.amazon.com/eks/pricing/[EKS pricing page].
====


To set up a cluster on EKS, you will need to set up an Amazon VPC (Virtual Private Cloud). You will also need to make sure that the account you will be using to create the EKS cluster has the appropriate <<_minimum_eks_permissions,permissions.>> For details, refer to the official guide on https://docs.aws.amazon.com/eks/latest/userguide/getting-started-console.html#eks-prereqs[Amazon EKS Prerequisites].

[#_amazon_vpc]
=== Amazon VPC

An Amazon VPC is required to launch the EKS cluster. The VPC enables you to launch AWS resources into a virtual network that you've defined. You can set one up yourself and provide it during cluster creation in Rancher. If you do not provide one during creation, Rancher will create one. For more information, refer to the https://docs.aws.amazon.com/eks/latest/userguide/create-public-private-vpc.html[Tutorial: Creating a VPC with Public and Private Subnets for Your Amazon EKS Cluster].

[#_iam_policies]
=== IAM Policies

Rancher needs access to your AWS account in order to provision and administer your Kubernetes clusters in Amazon EKS. You'll need to create a user for Rancher in your AWS account and define what that user can access.

. Create a user with programmatic access by following the steps https://docs.aws.amazon.com/IAM/latest/UserGuide/id_users_create.html[here].
. Next, create an IAM policy that defines what this user has access to in your AWS account. It's important to only grant this user minimal access within your account. The minimum permissions required for an EKS cluster are listed <<_minimum_eks_permissions,here.>> Follow the steps https://docs.aws.amazon.com/eks/latest/userguide/EKS_IAM_user_policies.html[here] to create an IAM policy and attach it to your user.
. Finally, follow the steps https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey[here] to create an access key and secret key for this user.

[NOTE]
.Important:
====

It's important to regularly rotate your access and secret keys. See this https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#rotating_access_keys_console[documentation] for more information.
====


For more detailed information on IAM policies for EKS, refer to the official https://docs.aws.amazon.com/eks/latest/userguide/IAM_policies.html[documentation on Amazon EKS IAM Policies, Roles, and Permissions].

[#_create_the_eks_cluster]
== Create the EKS Cluster

Use Rancher to set up and configure your Kubernetes cluster.

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Choose *Amazon EKS*.
. Enter a *Cluster Name*.
. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. Fill out the rest of the form. For help, refer to the <<_eks_cluster_configuration_reference,configuration reference.>>
. Click *Create*.

*Result:*

Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.

You can access your cluster after its state is updated to *Active*.

*Active* clusters are assigned two Projects:

* `Default`, containing the `default` namespace
* `System`, containing the `cattle-system`, `traefik`, `kube-public`, and `kube-system` namespaces

[#_eks_cluster_configuration_reference]
== EKS Cluster Configuration Reference

For the full list of EKS cluster configuration options, see {xref-deploy-eks-config}[this page.]

[#_architecture]
== Architecture

The figure below illustrates the high-level architecture of Rancher 2.x. The figure depicts a Rancher Server installation that manages two Kubernetes clusters: one created by RKE and another created by EKS.

.Managing Kubernetes Clusters through Rancher's Authentication Proxy
image::rancher-architecture-rancher-api-server.svg[Architecture]

[#_aws_service_events]
== AWS Service Events

To find information on any AWS Service events, please see https://status.aws.amazon.com/[this page].

[#_security_and_compliance]
== Security and Compliance

By default only the IAM user or role that created a cluster has access to it. Attempting to access the cluster with any other user or role without additional configuration will lead to an error. In Rancher, this means using a credential that maps to a user or role that was not used to create the cluster will cause an unauthorized error. For example, an EKSCtl cluster will not register in Rancher unless the credentials used to register the cluster match the role or user used by EKSCtl. Additional users and roles can be authorized to access a cluster by being added to the aws-auth configmap in the kube-system namespace. For a more in-depth explanation and detailed instructions, please see this https://aws.amazon.com/premiumsupport/knowledge-center/amazon-eks-cluster-access/[documentation].

For more information on security and compliance with your Amazon EKS Kubernetes cluster, please see this https://docs.aws.amazon.com/eks/latest/userguide/shared-responsibilty.html[documentation].

[#_tutorial]
== Tutorial

This https://aws.amazon.com/blogs/opensource/managing-eks-clusters-rancher/[tutorial] on the AWS Open Source Blog will walk you through how to set up an EKS cluster with Rancher, deploy a publicly accessible app to test the cluster, and deploy a sample project to track real-time geospatial data using a combination of other open-source software such as Grafana and InfluxDB.

[#_minimum_eks_permissions]
== Minimum EKS Permissions

These are the minimum set of permissions necessary to access the full functionality of Rancher's EKS driver. These permissions allow Rancher to create the Service Role and Virtual Private Cloud (VPC) resources on the users' behalf, if necessary.

[NOTE]
====
In EKS v1.23 and above, you must use the out-of-tree drivers for EBS-backed volumes. You need <<_ebs_csi_driver_addon_permissions,specific permissions>> to enable this add-on.
====


|===
| Resource | Description

| EBS CSI Driver add-on
| Provides permissions that allow Kubernetes to interact with EBS and configure the cluster to enable the add-on (required for EKS v1.23 and above). Rancher can install the add-on with the following <<_ebs_csi_driver_addon_permissions,EBS CSI Driver addon Permissions>>.
|===

Resource targeting uses `*` as the ARN of many of the resources created cannot be known before creating the EKS cluster in Rancher.

[,json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Sid": "EC2Permissions",
      "Effect": "Allow",
      "Action": [
        "ec2:AuthorizeSecurityGroupEgress",
        "ec2:AuthorizeSecurityGroupIngress",
        "ec2:CreateKeyPair",
        "ec2:CreateLaunchTemplate",
        "ec2:CreateLaunchTemplateVersion",
        "ec2:CreateSecurityGroup",
        "ec2:CreateTags",
        "ec2:DeleteKeyPair",
        "ec2:DeleteLaunchTemplate",
        "ec2:DeleteLaunchTemplateVersions",
        "ec2:DeleteSecurityGroup",
        "ec2:DeleteTags",
        "ec2:DescribeAccountAttributes",
        "ec2:DescribeAvailabilityZones",
        "ec2:DescribeImages",
        "ec2:DescribeInternetGateways",
        "ec2:DescribeInstanceTypes",
        "ec2:DescribeKeyPairs",
        "ec2:DescribeLaunchTemplateVersions",
        "ec2:DescribeLaunchTemplates",
        "ec2:DescribeRegions",
        "ec2:DescribeRouteTables",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeTags",
        "ec2:DescribeVpcs",
        "ec2:RevokeSecurityGroupEgress",
        "ec2:RevokeSecurityGroupIngress",
        "ec2:RunInstances"
      ],
      "Resource": "*"
    },
    {
      "Sid": "CloudFormationPermissions",
      "Effect": "Allow",
      "Action": [
        "cloudformation:CreateStack",
        "cloudformation:CreateStackSet",
        "cloudformation:DeleteStack",
        "cloudformation:DescribeStackResource",
        "cloudformation:DescribeStackResources",
        "cloudformation:DescribeStacks",
        "cloudformation:ListStackResources",
        "cloudformation:ListStacks"
      ],
      "Resource": "*"
    },
    {
      "Sid": "IAMPermissions",
      "Effect": "Allow",
      "Action": [
        "iam:AddRoleToInstanceProfile",
        "iam:AttachRolePolicy",
        "iam:CreateInstanceProfile",
        "iam:CreateRole",
        "iam:CreateServiceLinkedRole",
        "iam:DeleteInstanceProfile",
        "iam:DeleteRole",
        "iam:DetachRolePolicy",
        "iam:GetInstanceProfile",
        "iam:GetRole",
        "iam:ListAttachedRolePolicies",
        "iam:ListInstanceProfiles",
        "iam:ListInstanceProfilesForRole",
        "iam:ListRoles",
        "iam:ListRoleTags",
        "iam:PassRole",
        "iam:RemoveRoleFromInstanceProfile",
        "iam:TagRole"
      ],
      "Resource": "*"
    },
    {
      "Sid": "KMSPermissions",
      "Effect": "Allow",
      "Action": "kms:ListKeys",
      "Resource": "*"
    },
    {
      "Sid": "EKSPermissions",
      "Effect": "Allow",
      "Action": [
        "eks:CreateCluster",
        "eks:CreateFargateProfile",
        "eks:CreateNodegroup",
        "eks:DeleteCluster",
        "eks:DeleteFargateProfile",
        "eks:DeleteNodegroup",
        "eks:DescribeAddon",
        "eks:DescribeCluster",
        "eks:DescribeFargateProfile",
        "eks:DescribeNodegroup",
        "eks:DescribeUpdate",
        "eks:ListClusters",
        "eks:ListFargateProfiles",
        "eks:ListNodegroups",
        "eks:ListTagsForResource",
        "eks:ListUpdates",
        "eks:TagResource",
        "eks:UntagResource",
        "eks:UpdateClusterConfig",
        "eks:UpdateClusterVersion",
        "eks:UpdateNodegroupConfig",
        "eks:UpdateNodegroupVersion"
      ],
      "Resource": "*"
    },
    {
      "Sid": "VPCPermissions",
      "Effect": "Allow",
      "Action": [
        "ec2:AssociateRouteTable",
        "ec2:AttachInternetGateway",
        "ec2:CreateInternetGateway",
        "ec2:CreateRoute",
        "ec2:CreateRouteTable",
        "ec2:CreateSecurityGroup",
        "ec2:CreateSubnet",
        "ec2:CreateVpc",
        "ec2:DeleteInternetGateway",
        "ec2:DeleteRoute",
        "ec2:DeleteRouteTable",
        "ec2:DeleteSubnet",
        "ec2:DeleteTags",
        "ec2:DeleteVpc",
        "ec2:DescribeVpcs",
        "ec2:DetachInternetGateway",
        "ec2:DisassociateRouteTable",
        "ec2:ModifySubnetAttribute",
        "ec2:ModifyVpcAttribute",
        "ec2:ReplaceRoute"
      ],
      "Resource": "*"
    }
  ]
}
----

When you create an EKS cluster, Rancher creates a service role with the following trust policy:

[,json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
}
----

This role also has two role policy attachments with the following policies' ARNs:

----
arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
arn:aws:iam::aws:policy/AmazonEKSServicePolicy
----

[#_ebs_csi_driver_addon_permissions]
=== EBS CSI Driver addon Permissions

The following are the required permissions for installing the Amazon EBS CSI Driver add-on.

[,json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": [
        "eks:AssociateIdentityProviderConfig",
        "eks:CreateAddon",
        "eks:DeleteAddon",
        "eks:DescribeAddonConfiguration",
        "eks:DescribeAddonVersions",
        "eks:DescribeIdentityProviderConfig",
        "eks:ListAddons",
        "eks:ListIdentityProviderConfigs",
        "eks:UpdateAddon",
        "iam:CreateOpenIDConnectProvider",
        "iam:ListOpenIDConnectProviders",
        "sts:AssumeRoleWithWebIdentity"
      ],
      "Resource": "*"
    }
  ]
}
----

[#_ipv6_dual_stack_networking_permissions]
=== IPv6 Dual-Stack Networking Permissions

The following are the additional permissions required for provisioning an *IPv6* EKS cluster from Rancher.

[NOTE]
====
These permissions are only necessary when Rancher is *creating* a new IPv6 cluster. During new cluster creation, Rancher needs these permissions to generate the dual-stack VPC, create the IAM OIDC provider, and assign an inline policy (`RancherManaged++_++AllowIPv6ForCNI`) to the Node Instance Role.

If you are registering (importing) an existing EKS cluster that already has IPv6 configured, these additional permissions are *not required*.
====

[,json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": [
        "ec2:AssignIpv6Addresses",
        "ec2:UnassignIpv6Addresses",
        "ec2:AssignPrivateIpAddresses",
        "ec2:UnassignPrivateIpAddresses",
        "ec2:AssociateVpcCidrBlock",
        "ec2:DisassociateVpcCidrBlock",
        "iam:PutRolePolicy",
        "iam:CreateOpenIDConnectProvider",
        "iam:ListOpenIDConnectProviders",
        "eks:AssociateIdentityProviderConfig",
        "eks:DescribeIdentityProviderConfig",
        "eks:ListIdentityProviderConfigs",
        "sts:AssumeRoleWithWebIdentity"
      ],
      "Resource": "*"
    }
  ]
}
----

[#_syncing]
== Syncing

The EKS provisioner can synchronize the state of an EKS cluster between Rancher and the provider. For an in-depth technical explanation of how this works, see {xref-sync-hosted-clusters}[Syncing.]

For information on configuring the refresh interval, refer to {xref-deploy-eks-config}#_configuring_the_refresh_interval[this section.]

[#_troubleshooting]
== Troubleshooting

If your changes were overwritten, it could be due to the way the cluster data is synced with EKS. Changes shouldn't be made to the cluster from another source, such as in the EKS console, and in Rancher within a five-minute span. For information on how this works and how to configure the refresh interval, refer to <<_syncing,Syncing.>>

If an unauthorized error is returned while attempting to modify or register the cluster and the cluster was not created with the role or user that your credentials belong to, refer to <<_security_and_compliance,Security and Compliance.>>

For any issues or troubleshooting details for your Amazon EKS Kubernetes cluster, please see this https://docs.aws.amazon.com/eks/latest/userguide/troubleshooting.html[documentation].

[#_programmatically_creating_eks_clusters]
== Programmatically Creating EKS Clusters

The most common way to programmatically deploy EKS clusters through Rancher is by using the Rancher2 Terraform provider. The documentation for creating clusters with Terraform is https://registry.terraform.io/providers/rancher/rancher2/latest/docs/resources/cluster[here.]
